[workspace]
members = ["tlcs", "x/timelock"]

[workspace.dependencies]
auth = {git = "https://github.com/rumos-io/gears", rev = "8cfe303aaafc9848c196489dd033441ba0e8dcab"}
bank = {git = "https://github.com/rumos-io/gears", rev = "8cfe303aaafc9848c196489dd033441ba0e8dcab"}
database = {git = "https://github.com/rumos-io/gears", rev = "8cfe303aaafc9848c196489dd033441ba0e8dcab"}
gears = {git = "https://github.com/rumos-io/gears", rev = "8cfe303aaafc9848c196489dd033441ba0e8dcab"}
proto-messages = {git = "https://github.com/rumos-io/gears", rev = "8cfe303aaafc9848c196489dd033441ba0e8dcab"}
proto-types = {git = "https://github.com/rumos-io/gears", rev = "8cfe303aaafc9848c196489dd033441ba0e8dcab"}
store = {git = "https://github.com/rumos-io/gears", rev = "8cfe303aaafc9848c196489dd033441ba0e8dcab"}

ibc-proto = {git = "https://github.com/joneskm/ibc-proto-rs"}
