[workspace]
members = ["tlcs", "x/timelock"]

[workspace.dependencies]
auth = {git = "https://github.com/rumos-io/gears", rev = "1e225fc7bc02ecac5cc6cadc6d7caca958452816"}
bank = {git = "https://github.com/rumos-io/gears", rev = "1e225fc7bc02ecac5cc6cadc6d7caca958452816"}
database = {git = "https://github.com/rumos-io/gears", rev = "1e225fc7bc02ecac5cc6cadc6d7caca958452816"}
gears = {git = "https://github.com/rumos-io/gears", rev = "1e225fc7bc02ecac5cc6cadc6d7caca958452816"}
proto-messages = {git = "https://github.com/rumos-io/gears", rev = "1e225fc7bc02ecac5cc6cadc6d7caca958452816"}
proto-types = {git = "https://github.com/rumos-io/gears", rev = "1e225fc7bc02ecac5cc6cadc6d7caca958452816"}
store = {git = "https://github.com/rumos-io/gears", rev = "1e225fc7bc02ecac5cc6cadc6d7caca958452816"}

ibc-proto = {git = "https://github.com/joneskm/ibc-proto-rs"}
