[workspace]
members = ["tlcs", "x/timelock"]

[workspace.dependencies]
auth = {git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9"}
bank = {git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9"}
database = {git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9"}
gears = {git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9"}
proto-messages = {git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9"}
proto-types = {git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9"}
store = {git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9"}

ibc-proto = {git = "https://github.com/joneskm/ibc-proto-rs"}
