[package]
name = "tlcs"
version = "0.1.0"
edition = "2021"

[dependencies]
proto-types = { git = "https://github.com/rumos-io/gears" }
proto-messages = { git = "https://github.com/rumos-io/gears" }
cosmwasm-std = "1.1.5"
ibc-proto = { git = "https://github.com/joneskm/ibc-proto-rs" }
tendermint-proto = { git = "https://github.com/joneskm/tendermint-rs" }
clap = { version = "4.2.2", features = ["derive"] }
bytes = "1.2.1"
serde = { version = "1.0", default-features = false }
database = { git = "https://github.com/rumos-io/gears" }
anyhow = "1.0.70"
gears = { git = "https://github.com/rumos-io/gears" }
store = { git = "https://github.com/rumos-io/gears" }
strum = "0.24.1"
strum_macros = "0.24"
bank = { git = "https://github.com/rumos-io/gears" }
auth = { git = "https://github.com/rumos-io/gears" }
axum = "0.6.18"
tendermint-informal = { package = "tendermint", git = "https://github.com/joneskm/tendermint-rs" }

[dev-dependencies]
