[package]
name = "tlcs"
version = "0.1.0"
edition = "2021"

[dependencies]
gears = { workspace = true }
proto-types = { workspace = true }
proto-messages = { workspace = true }
database = { workspace = true }
store = { workspace = true }
bank = { workspace = true }
auth = { workspace = true }

cosmwasm-std = "1.1.5"
ibc-proto = { git = "https://github.com/joneskm/ibc-proto-rs" }
tendermint-proto = { git = "https://github.com/joneskm/tendermint-rs" }
clap = { version = "4.2.2", features = ["derive"] }
bytes = "1.2.1"
serde = { version = "1.0", default-features = false }
axum = "0.6.18"
anyhow = "1.0.70"
strum = "0.24.1"
strum_macros = "0.24"
tendermint-informal = { package = "tendermint", git = "https://github.com/joneskm/tendermint-rs" }
timelock = { path = "../x/timelock" }

[dev-dependencies]
